# tevm-monorepo

./: .agent-working-on.txt  .depcheckrc  .dockerignore  .env.example  .eslintrc.js  .gas-snapshot  .gcloudignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .nxignore  .prettierignore  .prettierrc.js  .stackblitzrc  .wasm-size-config.json  10_precompiles.md  11_feemarket.md  12_transaction.md  13_withdrawal.md  14_eip7702.md  15_statemanager.md  16_jumptable.md  17_opcodes.md  18_host.md  1_memory.issue.md  2_stack.issue.md  3_constants_utils.md  4_bitvec.md  5_contract.md  6_frame.md  7_journal.md  8_gas.md  9_statedb.md  CLAUDE.md  CONSTANTS_MODULE_SUMMARY.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  Debugger.md  (+124 more)
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: helios.rs  lib.rs
apps/smithy/: Cargo.toml  package.json  styles.css
apps/smithy/src/: app.rs  main.rs
apps/smithy/src-tauri/: Cargo.toml  tauri.conf.json
apps/smithy/src-tauri/src/: lib.rs  main.rs
bundler-packages/bundler-rs/: Cargo.toml  README.md  TODO.md  browser.js  index.d.ts  index.js  package.json  project.json  wasi-worker-browser.mjs  wasi-worker.mjs
bundler-packages/bundler-rs/examples/: usage.js
bundler-packages/bundler-rs/npm/darwin-arm64/: README.md  package.json
bundler-packages/bundler-rs/src/: artifacts.rs  bundle.rs  bundler.rs  cache.rs  config.rs  file_access.rs  lib.rs  models.rs
bundler-packages/bundler-rs/src/tests/: config_tests.rs  mod.rs  models_tests.rs
bundler-packages/bundler-rs/test/: index.js
bundler-packages/bundler-rs/test/fixtures/: test.js
bundler-packages/resolutions-rs/: .npmignore  CHANGELOG.md  Cargo.toml  README.md  browser.js  index.d.ts  index.js  package.json  project.json  tevm_resolutions_rs.wasi-browser.js  tevm_resolutions_rs.wasi.cjs  wasi-worker-browser.mjs  wasi-worker.mjs
bundler-packages/resolutions-rs/benchmark/: debug.js  index.bench.ts  mocked-js-impl.js  rust_bridge.js  test-js-module.js  tester.js
bundler-packages/resolutions-rs/benchmark/fixtures/: Main.sol
bundler-packages/resolutions-rs/benchmark/fixtures/interfaces/: IERC20.sol  IERC721.sol
bundler-packages/resolutions-rs/examples/: benchmark.rs  usage.js
bundler-packages/resolutions-rs/fixtures/: fixture.sol
bundler-packages/resolutions-rs/fixtures/contracts/: Lib1_D4_I0.sol  Marketplace.sol  MarketplaceStorage.sol  TokenEvents.sol
bundler-packages/resolutions-rs/fixtures/contracts/level1/: Contract_D1_I0.sol
bundler-packages/resolutions-rs/fixtures/contracts/level2/: Contract_D2_I1.sol
bundler-packages/resolutions-rs/fixtures/contracts/level3/: Contract_D3_I0.sol  Contract_D3_I1.sol  Contract_D3_I2.sol  (+1 more)
bundler-packages/resolutions-rs/fixtures/libraries/: SafeMath.sol
bundler-packages/resolutions-rs/npm/darwin-arm64/: CHANGELOG.md  README.md  package.json
bundler-packages/resolutions-rs/npm/darwin-x64/: CHANGELOG.md  README.md  package.json
bundler-packages/resolutions-rs/npm/freebsd-x64/: CHANGELOG.md  README.md  package.json
bundler-packages/resolutions-rs/npm/linux-arm-gnueabihf/: CHANGELOG.md  README.md  package.json
bundler-packages/resolutions-rs/npm/linux-arm64-gnu/: CHANGELOG.md  README.md  package.json
bundler-packages/resolutions-rs/npm/linux-arm64-musl/: CHANGELOG.md  README.md  package.json
bundler-packages/resolutions-rs/npm/linux-x64-musl/: CHANGELOG.md  README.md  package.json
bundler-packages/resolutions-rs/npm/wasm32-wasi/: CHANGELOG.md  README.md  package.json
bundler-packages/resolutions-rs/npm/win32-arm64-msvc/: CHANGELOG.md  README.md  package.json
bundler-packages/resolutions-rs/npm/win32-ia32-msvc/: CHANGELOG.md  README.md  package.json
bundler-packages/resolutions-rs/src/: config.rs  context.rs  index.d.ts  index.js  lib.rs  models.rs  module_factory.rs  module_resolution_error.rs  process_module.rs  read_file.rs  resolve_import_path.rs  resolve_imports.rs  state.rs
bundler-packages/resolutions-rs/test/: index.js
bundler-packages/resolutions-rs/test/fixtures/: Dependency.sol  Test.sol
bundler-packages/runtime-rs/: CHANGELOG.md  Cargo.toml  README.md  browser.js  index.d.ts  index.js  package.json  project.json  tevm_runtime_rs.wasi-browser.js  tevm_runtime_rs.wasi.cjs  wasi-worker-browser.mjs  wasi-worker.mjs
bundler-packages/runtime-rs/npm/darwin-arm64/: CHANGELOG.md  README.md  package.json
bundler-packages/runtime-rs/npm/darwin-x64/: CHANGELOG.md  README.md  package.json
bundler-packages/runtime-rs/npm/freebsd-x64/: CHANGELOG.md  README.md  package.json
bundler-packages/runtime-rs/npm/linux-arm-gnueabihf/: CHANGELOG.md  README.md  package.json
bundler-packages/runtime-rs/npm/linux-arm64-gnu/: CHANGELOG.md  README.md  package.json
bundler-packages/runtime-rs/npm/linux-arm64-musl/: CHANGELOG.md  README.md  package.json
bundler-packages/runtime-rs/npm/linux-x64-musl/: CHANGELOG.md  README.md  package.json
bundler-packages/runtime-rs/npm/wasm32-wasi/: CHANGELOG.md  README.md  package.json
bundler-packages/runtime-rs/npm/win32-arm64-msvc/: CHANGELOG.md  README.md  package.json
bundler-packages/runtime-rs/npm/win32-ia32-msvc/: CHANGELOG.md  README.md  package.json
bundler-packages/runtime-rs/src/: lib.rs
bundler-packages/solc-rs/: CHANGELOG.md  Cargo.toml  README.md  package.json  project.json
bundler-packages/solc-rs/src/: error.rs  lib.rs  models.rs  solc.rs
bundler-packages/solc-rs/src/examples/: basic_usage.rs  mod.rs
bundler-packages/solc-rs/src/napi/: mod.rs
bundler-packages/solc-rs/src/test_contracts/: SimpleStorage.sol
core/: '  (+8 more)
src/Compilers/: Cargo.toml  README.md  build.rs  compiler.zig  compiler_wasm.zig  debug_types.rs  foundry_wrapper.h  get_artifacts.rs  package.zig  rust_build.zig
src/Compilers/src/: get_artifacts.rs  lib.rs
src/precompiles/: Cargo.toml  README.md  WASM_BUILD_REPORT.md  build.rs  cbindgen.toml  identity.zig  package.zig  precompiles.zig  precompiles_wasm.zig  revm_precompiles_wrapper.h  rust_build.zig  sha256.zig  wasm_c_api.zig
src/precompiles/src/: lib.rs
(+21290 files in other folders)
