[package]
name = "krome"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
repository = "https://github.com/evmts/krome"
default-run = "krome"
edition = "2021"
rust-version = "1.60"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "krome_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1.29.1", features = ["full"] }
once_cell = "1.20.3"
helios = { git = "https://github.com/a16z/helios", branch = "master" }
