[package]
name = 'tevm_bundler_rs'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = ["cdylib"]

[dependencies]
# Async utilities
futures = "0.3.31"
tokio = { version = "1.44.2", features = [
    "rt-multi-thread",
    "macros",
    "fs",
]}
dashmap = "5.5.1"

# Other Tevm Rust packages
tevm_resolutions_rs = { path = "../resolutions-rs" }
tevm_solc_rs = { path = "../solc-rs" }
tevm_runtime_rs = { path = "../runtime-rs" }

# No workspace definition here - it's defined at the root level

# Solc version management with foundry-compilers
foundry-compilers = { version = "0.6.2", default-features = false, features = ["async", "full"] }
semver = "1.0.17"

# Utilities
once_cell = "1.21.3"
num_cpus = "1.16.0"
regex = "1.11.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.140"

# Hashing for caching
sha2 = "0.10.8" 
hex = "0.4.3"

# NAPI bindings
napi = { version = "2.16.0", default-features = false, features = ["napi4", "tokio_rt", "serde-json", "compat-mode", "async", "napi8"] }
napi-derive = "2.16.0"
libc = "0.2.172"

[build-dependencies]
napi-build = "2.0.1"
