[package]
name = 'tevm_resolutions_rs'
version = '0.1.0'
edition = '2021'

[dependencies]
futures = "0.3.31"
node-resolve = "2.2.0"
once_cell = "1.21.3"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
solar = { version = "0.1.2", package = "solar-compiler" }
tempfile = "3.19.1"
tokio = { version = "1.44.2", features =[
    "rt-multi-thread",
    "macros",
    "fs",
]}

[lib]
crate-type = [
    'cdylib',
    'rlib',
]

