[package]
name = 'tevm_resolutions_rs'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = ["cdylib"]

[dependencies]
# Async utilities
futures = "0.3.31"
tokio = { version = "1.44.2", features = [
    "rt-multi-thread",
    "macros",
    "fs",
]}
dashmap = "5.5.1"

# Node module resolution
node-resolve = "2.2.0"

# Utilities
once_cell = "1.21.3"
num_cpus = "1.16.0"
regex = "1.11.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.140"

# Solidity parsing
solar = { version = "0.1.2", package = "solar-compiler" }
tempfile = "3.19.1"

# NAPI bindings
napi = { version = "2.16.0", default-features = false, features = ["napi4", "tokio_rt", "serde-json", "compat-mode", "async", "napi8"] }
napi-derive = "2.16.0"
libc = "0.2.172"
tokio-stream = "0.1.17"

[build-dependencies]
napi-build = "2.0.1"
