[package]
name = 'tevm_runtime_rs'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alloy-primitives = { version = "0.7.0", features = ["serde"] }
foundry-compilers = { version = "0.6.2", default-features = false, features = ["async", "full"] }
hex = "0.4.3"
node-resolve = "2.2.0"
once_cell = "1.21.3"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"
tempfile = "3.19.1"
tevm_solc_rs = { path = "../solc-rs" }

# NAPI bindings
napi = { version = "2.16.0", default-features = false, features = ["napi4", "tokio_rt", "serde-json", "compat-mode", "async", "napi8"] }
napi-derive = "2.16.0"
libc = "0.2.172"

[build-dependencies]
napi-build = "2.0.1"

