[package]
name = 'tevm_solc_rs'
version = '0.1.0'
edition = '2021'
description = 'A typesafe Rust wrapper for the Solidity compiler (solc)'
authors = ["TEVM Contributors"]
license = "MIT"
repository = "https://github.com/evmts/tevm-monorepo"
readme = "README.md"
keywords = ["solidity", "compiler", "ethereum", "solc", "tevm"]

[dependencies]
once_cell = "1.21.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
hex = "0.4.3"
reqwest = { version = "0.11.26", features = ["json"] }

[lib]
crate-type = [
    'cdylib',
    'rlib',
]

